apps/bitwarden/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitwarden
  namespace: bitwarden
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: bitwarden.thecluster.io
      http:
        paths:
          - pathType: Prefix
            path: /attachments
            backend:
              service:
                name: bitwarden-attachments
                port:
                  number: 5000
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: bitwarden-api
                port:
                  number: 5000
          - pathType: Prefix
            path: /icons
            backend:
              service:
                name: bitwarden-icons
                port:
                  number: 5000
          - pathType: Prefix
            path: /notifications
            backend:
              service:
                name: bitwarden-notifications
                port:
                  number: 5000
          - pathType: Prefix
            path: /events
            backend:
              service:
                name: bitwarden-events
                port:
                  number: 5000
          - pathType: Prefix
            path: /sso
            backend:
              service:
                name: bitwarden-sso
                port:
                  number: 5000
          - pathType: Prefix
            path: /identity
            backend:
              service:
                name: bitwarden-identity
                port:
                  number: 5000
          - pathType: Prefix
            path: /admin
            backend:
              service:
                name: bitwarden-admin
                port:
                  number: 5000
          - pathType: Prefix
            path: /
            backend:
              service:
                name: bitwarden-web
                port:
                  number: 5000
